--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,3 +1,8 @@
 body {
-    font-family: 'Ubuntu', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
+  transition: background-color 0.3s ease-in-out 0.1s;
+}
+
+.dark-mode .title {
+  transition: color 0.2s ease-in-out 0.3s;
 }
